--- a/src/Upload.form
+++ b/src/Upload.form
@@ -6,7 +6,7 @@
       <xy x="31" y="20" width="489" height="500"/>
     </constraints>
     <properties>
-      <background color="-1250068"/>
+      <background color="-5963894"/>
     </properties>
     <border type="none"/>
     <children>
@@ -15,7 +15,9 @@
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5963894"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="b0e9e" class="javax.swing.JLabel" binding="codeLabel">
@@ -33,7 +35,9 @@
         <constraints>
           <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5963894"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="f6a40" class="javax.swing.JButton" binding="saveButton" default-binding="true">
@@ -41,6 +45,8 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-5963894"/>
+              <enabled value="true"/>
               <text value="Save"/>
             </properties>
           </component>
@@ -61,7 +67,9 @@
         <constraints>
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5963894"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="9dd73" class="javax.swing.JTextField" binding="codeField">
@@ -109,7 +117,9 @@
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5963894"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="f199b" class="javax.swing.JLabel" binding="languageLabel">
