--- a/src/app/MainMenu.form
+++ b/src/app/MainMenu.form
@@ -9,7 +9,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="e52ab" class="javax.swing.JButton" binding="button1" default-binding="true">
+      <component id="e52ab" class="javax.swing.JButton" binding="UploadBtn">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag top="0" left="0" bottom="30" right="0" weightx="0.0" weighty="0.0"/>
@@ -22,7 +22,7 @@
           <text value="Upload Source Code"/>
         </properties>
       </component>
-      <component id="3a268" class="javax.swing.JButton" binding="button2" default-binding="true">
+      <component id="3a268" class="javax.swing.JButton" binding="PracticeBtn">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag top="0" left="0" bottom="30" right="0" weightx="0.0" weighty="0.0"/>
@@ -33,7 +33,7 @@
           <text value="Practice !"/>
         </properties>
       </component>
-      <component id="3d1db" class="javax.swing.JButton" binding="button3" default-binding="true">
+      <component id="3d1db" class="javax.swing.JButton" binding="ExitBtn">
         <constraints>
           <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
