--- a/src/Upload.form
+++ b/src/Upload.form
@@ -72,10 +72,10 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="9dd73" class="javax.swing.JTextField" binding="codeField">
+          <component id="eb14d" class="javax.swing.JTextArea" binding="CodeArea">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
             <properties/>
