--- a/src/app/MainMenu.form
+++ b/src/app/MainMenu.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="app.MainMenu">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridBagLayout">
+  <grid id="27dc6" binding="MainPanel" layout-manager="GridBagLayout">
     <constraints>
       <xy x="24" y="38" width="336" height="382"/>
     </constraints>
@@ -9,7 +9,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="e52ab" class="javax.swing.JButton" binding="UploadBtn">
+      <component id="e52ab" class="javax.swing.JButton" binding="UploadButton">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag top="0" left="0" bottom="30" right="0" weightx="0.0" weighty="0.0"/>
@@ -22,7 +22,7 @@
           <text value="Upload Source Code"/>
         </properties>
       </component>
-      <component id="3a268" class="javax.swing.JButton" binding="PracticeBtn">
+      <component id="3a268" class="javax.swing.JButton" binding="PracticeButton">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag top="0" left="0" bottom="30" right="0" weightx="0.0" weighty="0.0"/>
@@ -33,7 +33,7 @@
           <text value="Practice !"/>
         </properties>
       </component>
-      <component id="3d1db" class="javax.swing.JButton" binding="ExitBtn">
+      <component id="3d1db" class="javax.swing.JButton" binding="ExitButton">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
