--- a/src/app/practice.form
+++ b/src/app/practice.form
@@ -20,7 +20,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="c5af9" class="javax.swing.JLabel">
+          <component id="c5af9" class="javax.swing.JLabel" binding="practiceLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -29,7 +29,7 @@
               <text value="Practice!"/>
             </properties>
           </component>
-          <grid id="b6ad6" binding="TimePanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="b6ad6" binding="TimePanel" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -39,7 +39,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="5eaa0" class="javax.swing.JLabel">
+              <component id="5eaa0" class="javax.swing.JLabel" binding="LanguageLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -47,12 +47,28 @@
                   <text value="Language:"/>
                 </properties>
               </component>
-              <component id="4f7fb" class="javax.swing.JLabel">
+              <component id="4f7fb" class="javax.swing.JLabel" binding="TimeLabel">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Time Remaining:"/>
+                </properties>
+              </component>
+              <component id="27496" class="javax.swing.JLabel" binding="LanguageField">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Time Remaining:"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="93c02" class="javax.swing.JLabel" binding="TimeField">
+                <constraints>
+                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value=""/>
                 </properties>
               </component>
             </children>
