--- a/src/app/practice.form
+++ b/src/app/practice.form
@@ -99,7 +99,9 @@
                 <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value=""/>
+            </properties>
           </component>
         </children>
       </grid>
