fix the problem in read file and store it's content in text area

--- a/src/app/practice.form
+++ b/src/app/practice.form
@@ -36,6 +36,7 @@
             </constraints>
             <properties>
               <background color="-5963894"/>
+              <enabled value="true"/>
             </properties>
             <border type="none"/>
             <children>
@@ -95,12 +96,20 @@
         <children>
           <component id="f75a6" class="javax.swing.JTextArea" binding="OriginalCodeField">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties>
+              <doubleBuffered value="true"/>
+              <editable value="true"/>
+              <enabled value="true"/>
+              <inheritsPopupMenu value="false"/>
+              <lineWrap value="true"/>
               <text value=""/>
+              <verifyInputWhenFocusTarget value="true"/>
+              <visible value="true"/>
+              <wrapStyleWord value="true"/>
             </properties>
           </component>
         </children>
