--- a/src/app/practice.form
+++ b/src/app/practice.form
@@ -91,7 +91,10 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <enabled value="true"/>
+          <visible value="true"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="f75a6" class="javax.swing.JTextArea" binding="OriginalCodeField">
